chore: version upgrade 0.0.4

--- a/app/wolf_imageutil_lib/build.gradle
+++ b/app/wolf_imageutil_lib/build.gradle
@@ -23,7 +23,7 @@ android {
         minSdk 21
         targetSdk 30
         versionCode 1
-        versionName "0.0.1"
+        versionName "0.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -36,11 +36,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
