--- a/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
+++ b/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="dh.wolf.wolf_imageutil_lib">
+
+    <uses-sdk android:minSdkVersion="21"
+        tools:ignore="GradleOverrides" />
+
+    <application/>
 
 </manifest>
