feat: Wolf Listener add

--- a/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
+++ b/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-sdk android:minSdkVersion="21"
         tools:ignore="GradleOverrides" />
 
-    <application/>
+    <application>
+        <activity
+            android:name="dh.wolf.wolf_imageutil_lib.WolfActivity"
+            android:screenOrientation="unspecified" />
+    </application>
 
 </manifest>
