feat: 10가지 기능 최종 버전 제공 - 0.1.0

--- a/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
+++ b/app/wolf_imageutil_lib/src/main/AndroidManifest.xml
@@ -1,12 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="dh.wolf.wolf_imageutil_lib" >
-
-    <application>
-        <activity
-            android:name=".WolfActivity"
-            android:exported="true" />
-    </application>
-
-</manifest>
+<manifest package="dh.wolf.wolf_imageutil_lib" />
